# fsr-injector-frontiers

./: BUILD_WITH_GITHUB.md  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
cmake/: mingw_d3d12_shim.h
docs/: DXVK_VULKAN_MIGRATION_PLAN.md  SONIC_FRONTIERS_DXVK_PROFILE.md  TAA_TRACE_LOGGER.md
profiles/: sonic_frontiers_dxvk_profile.json
src/: dllmain.cpp  dxgi_proxy.def
src/capture/: dx11_resource_logger.cpp  dx11_resource_logger.h  generic_resource_scout.cpp  generic_resource_scout.h
src/core/: config.h  log.cpp  log.h
src/detect/: upscaler_detect.cpp  upscaler_detect.h
src/fsr/: framegen.cpp  framegen.h  fsr_integration.cpp  fsr_integration.h  upscaler.cpp  upscaler.h
src/hooks/: depth_hook.cpp  depth_hook.h  dx12_queue_capture.cpp  dx12_queue_capture.h  swapchain_hook.cpp  swapchain_hook.h
src/overlay/: overlay.cpp  overlay.h  overlay_dx12.cpp  overlay_dx12.h
src/proxy/: dxgi_proxy.cpp  dxgi_proxy.h
